--- a/www/index.html
+++ b/www/index.html
@@ -6,14 +6,14 @@
     <script type="text/javascript">
     $(document).ready(function() {
         $("#insert").click(function() {
-            var title = $("#title").val();
-            var duration = $("#duration").val();
-            var price = $("#price").val();
-            var dataString = "title=" + title + "&duration=" + duration + "&price=" + price + "&insert=";
-            if ($.trim(title).length > 0 & $.trim(duration).length > 0 & $.trim(price).length > 0) {
+            var nama_minuman = $("#nama_minuman").val();
+            var harga = $("#harga").val();
+            var id_penjual = $("#id_penjual").val();
+            var dataString = "nama_minuman=" + nama_minuman + "&harga=" + harga +  "&id_penjual=" + id_penjual + "&insert=";
+            if ($.trim(nama_minuman).length > 0 & $.trim(harga).length > 0 & $.trim(id_penjual).length > 0) {
                 $.ajax({
                     type: "POST",
-                    url: "https://kungfumas.000webhostapp.com/insert.php",
+                    url: "https://baguspradika.000webhostapp.com/cordova/appcordova-master/www/insert.php",
                     data: dataString,
                     crossDomain: true,
                     cache: false,
@@ -44,18 +44,18 @@
     <br/>
     <br/>
     <div class="list">
-        <input type="hidden" id="id" value="" />
+        <input type="hidden" id="id_minuman" value="" />
         <div class="item">
-            <label>Title</label>
-            <input type="text" id="title" value="" />
+            <label>Nama Minuman</label>
+            <input type="text" id="nama_minuman" value="" />
         </div>
         <div class="item">
-            <label>Duration</label>
-            <input type="text" id="duration" value="" />
+            <label>Harga</label>
+            <input type="text" id="harga" value="" />
         </div>
         <div class="item">
-            <label>Price</label>
-            <input type="text" id="price" value="" />
+            <label>ID Penjual</label>
+            <input type="text" id="id_penjual" value="" />
         </div>
         <div class="item">
             <input type="button" id="insert" class="button button-block" value="Insert" />
