--- a/www/readjson.html
+++ b/www/readjson.html
@@ -5,15 +5,16 @@
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript">
     $(document).ready(function() {
-        var url = "https://kungfumas.000webhostapp.com/json.php";
+        var url = "https://baguspradika.000webhostapp.com/cordova/appcordova-master/www/json.php";
         $.getJSON(url, function(result) {
             console.log(result);
             $.each(result, function(i, field) {
-                var id = field.id;
-                var title = field.title;
-                var duration = field.duration;
-                var price = field.price;
-                $("#listview").append("<a class='item' href='form.html?id=" + id + "&title=" + title + "&duration=" + duration + "&price=" + price + "'><span class='item-note'>$" + price + "</span><h2>" + title + " </h2><p>" + duration + "</p></a>");
+                var id_minuman = field.id_minuman;
+                var nama_minuman = field.nama_minuman;
+                var harga = field.harga;
+                
+                var id_penjual = field.id_penjual;
+                $("#listview").append("<a class='item' href='form.html?id_minuman=" + id_minuman + "&nama_minuman=" + nama_minuman + "&harga=" + harga + "&id_penjual=" + id_penjual + "'><h2>" + nama_minuman + " </h2><h2>" + harga + " </h2><h2>"  + id_penjual + "</h2></a>");
             });
         });
     });
